--- a/mts_camera_link.html
+++ b/mts_camera_link.html
@@ -276,7 +276,7 @@
         <div class="header-section">
             
             <div class="main-title">Capture Photos</div>
-            <div class="subtitle">Professional Quality Uploads</div>
+            <div class="subtitle">Mts Photo Uploads</div>
         </div>
 
         <div class="camera-card">
@@ -408,4 +408,5 @@
         window.onload = initCamera;
     </script>
 </body>
+
 </html>
