--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             border: 1px solid var(--border);
             border-radius: 100px;
             padding: 6px 16px;
-            font-size: 11px;
+            font-size: 20px;
             font-weight: 500;
             letter-spacing: 0.12em;
             text-transform: uppercase;
@@ -150,8 +150,8 @@
             position: absolute;
             top: 0; left: 20%; right: 20%;
             height: 1px;
-            border-radius: 1px;
-            transition: opacity 0.3s;
+            border-radius: 5px;
+            transition: opacity 0.6s;
         }
 
         .card.grn::before { background: var(--grn); }
@@ -284,7 +284,7 @@
             </a>
         </div>
 
-        <footer class="footer">
+        <footer class="footer" style="font-size: 15px;">
             Tap a section to open the camera &amp; upload to SharePoint
         </footer>
 
